syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";

option csharp_namespace = "UploadThingsGrpcService.PizzaSpecialProto";

service PizzaSpecialService {
  // Create
  rpc CreatePizzaSpecial(CreatePizzaSpecialRequest) returns (CreatePizzaSpecialResponse) {
    option (google.api.http) = {
      post: "/v1/PizzaSpecial"
      body: "*"
    };
  }

  // Read Single
  rpc ReadPizzaSpecial(ReadPizzaSpecialRequest) returns (ReadPizzaSpecialResponse) {
    option (google.api.http) = {get: "/v1/PizzaSpecial"};
  }

  // Read List
  rpc ListPizzaSpecial(GetAllRequest) returns (GetAllResponse) {
    option (google.api.http) = {get: "/v1/PizzaSpecial/GetAllList"};
  }

  // Update
  rpc UpdatePizzaSpecial(UpdatePizzaSpecialRequest) returns (UpdatePizzaSpecialResponse) {
    option (google.api.http) = {
      put: "/v1/PizzaSpecial"
      body: "*"
    };
  }

  // Delete
  rpc DeletePizzaSpecial(DeletePizzaSpecialRequest) returns (DeletePizzaSpecialResponse) {
    option (google.api.http) = {delete: "/v1/PizzaSpecial/{id}"};
  }
}

message CreatePizzaSpecialRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double baseprice = 4;
  string imageurl = 5;
  bool vegetarian = 6;
  bool vegan = 7;
}
message CreatePizzaSpecialResponse {
  int32 id = 1;
}

message ReadPizzaSpecialRequest {
  int32 id = 1;
  google.protobuf.FieldMask data_that_needed = 2;
}
message ReadPizzaSpecialResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double baseprice = 4;
  string imageurl = 5;
  bool vegetarian = 6;
  bool vegan = 7;
}

message GetAllRequest {}
message GetAllResponse {
  repeated ReadPizzaSpecialResponse pizza_entities_data = 1;
}

message UpdatePizzaSpecialRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double baseprice = 4;
  string imageurl = 5;
  bool vegetarian = 6;
  bool vegan = 7;
}
message UpdatePizzaSpecialResponse {
  int32 id = 1;
}

message DeletePizzaSpecialRequest {
  int32 id = 1;
}
message DeletePizzaSpecialResponse {
  int32 id = 1;
}
